= HEAD

* Add :static plugin, for more easily serving static files (jeremyevans)

* Recognize Roda :root option in render and assets plugins (jeremyevans)

* Make :layout=>false option in render plugin override previous layout template (jeremyevans)

* Make add_file in the mailer plugin add the files after the email body instead of before (jeremyevans)

= 2.0.0 (2015-02-13)

* Allow Roda app to be used as a regular rack app even when using the middleware plugin (jeremyevans)

* Make render plugin :layout option always be true or false (jeremyevans)

* Make :layout=>true view option use the default layout (jeremyevans)

* Make error_handler plugin rescue ScriptError in addition to StandardError (jeremyevans)

* Make halt plugin integrate with symbol_views, json, and similar plugins (jeremyevans)

* Add padrino_render plugin, adding render/partial methods that work similar to Padrino (jeremyevans)

* Add Roda#render_template private method for template rendering, for use by plugins (jeremyevans)

* Make Roda#initialize take env hash, #call take route_block, remove private #_route (jeremyevans)

* Remove keep_remaining_path/update_remaining_path private request methods (jeremyevans)

* Don't modify SCRIPT_NAME/PATH_INFO during routing, merging static_path_info plugin into core (jeremyevans)

* Remove code deprecated in Roda 1.3.0 (jeremyevans)

= 1.3.0 (2015-01-13)

* Make static_path_info plugin restore original SCRIPT_NAME/PATH_INFO before returning from r.run (jeremyevans)

* Add RodaMajorVersion, RodaMinorVersion, and RodaPatchVersion (jeremyevans)

* Add delete_empty_headers plugin for deleting response headers that are empty before return response (jeremyevans)

* Make freeze class method freeze internal data structures to avoid thread safety issues (jeremyevans)

* Deprecate mutating plugin option hashes for chunked, default_headers, error_email, json, and render plugins (jeremyevans)
